# bbcp

./: .gitignore  LICENSE.md  Makefile  Makefile.in  README.md  configure  configure.ac  notes.txt
exfat.bundle/: README  compiler.h  config.h  exfat.h
exfat.bundle/libexfat/: Makefile.in  README  cluster.c  configure  configure.ac  node.c  stamp-h1
include/: Application.h  ArgsParser.h  Config.h  Drive.h  ExfatFile.h  ExfatNode.h  ExfatPartition.h  Marshal.h  Processor.h  Reporter.h  Types.h  Udev.h  Unit.h  UnitStorage.h  Wizard.h
include/interfaces/: File_I.h
scripts/: parse.sh  start.sh
src/: Application.cpp  ArgsParser.cpp  Config.cpp  Drive.cpp  ExfatFile.cpp  ExfatNode.cpp  ExfatPartition.cpp  Marshal.cpp  Processor.cpp  Reporter.cpp  Types.cpp  Udev.cpp  Unit.cpp  UnitStorage.cpp  Wizard.cpp  main.cpp
src.test/: Marshal.test.cpp
test.site/: genFiles.sh  kpartx-add.sh  mkDisk.sh  notes.txt  setup.me
